@@ -22,6 +22,9 @@
 
 	* src/ejabberd_sm.erl: Bugfix in get_user_info/3.
 
+	* src/mod_announce.erl: get_title/2 accepts node argument in binary()
+	or list() format.
+
 2009-02-13 Christophe Romain <christophe.romain@process-one.net>
 
 	* src/ejabberd_auth.erl: prevent from calling 
